<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_info">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bebetterprogrammer.trecox.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_order_list"
        android:name="com.bebetterprogrammer.trecox.fragments.OrderListFragment"
        android:label="@string/title_order_list"
        tools:layout="@layout/fragment_order_list" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.bebetterprogrammer.trecox.fragments.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>