<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/otp_text"
        android:textColor="@color/greyDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_24"
        android:background="@drawable/mobile_number_layout"
        android:hint="@string/otp_text"
        android:inputType="number"
        android:paddingStart="@dimen/margin_24"
        android:paddingEnd="@dimen/margin_24"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_remaining_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/remaining_seconds"
        android:textColor="@color/greyDark"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_otp" />

    <TextView
        android:id="@+id/num_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        android:text="60"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_remaining_seconds"
        android:textSize="@dimen/counter_text_size"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>